--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -92,9 +92,9 @@ CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_dns2socks=m
 CONFIG_PACKAGE_dns2tcp=m
-CONFIG_PACKAGE_docker=m
-CONFIG_PACKAGE_docker-compose=m
-CONFIG_PACKAGE_dockerd=m
+CONFIG_PACKAGE_docker=n
+CONFIG_PACKAGE_docker-compose=n
+CONFIG_PACKAGE_dockerd=n
 CONFIG_PACKAGE_etherwake=y
 CONFIG_PACKAGE_firewall=m
 CONFIG_PACKAGE_geoview=m
@@ -255,11 +255,11 @@ CONFIG_PACKAGE_luci-app-passwall=m
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_V2ray_Plugin is not set
 # CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Xray is not set
 # CONFIG_PACKAGE_luci-app-samba4=y
-CONFIG_PACKAGE_luci-app-sqm=y
-CONFIG_PACKAGE_luci-app-ttyd=y
+CONFIG_PACKAGE_luci-app-sqm=n
+CONFIG_PACKAGE_luci-app-ttyd=n
 CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-wol=y
-CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-zerotier=n
 CONFIG_PACKAGE_luci-app-athena-led=m
 CONFIG_PACKAGE_luci-base=y
 CONFIG_PACKAGE_luci-compat=y
@@ -267,19 +267,19 @@ CONFIG_PACKAGE_luci-i18n-athena-led-zh-cn=m
 CONFIG_PACKAGE_luci-i18n-argon-config-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-homeproxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-package-manager-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=m
+CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=n
 # CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-sqm-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=n
 CONFIG_PACKAGE_luci-lib-base=y
-CONFIG_PACKAGE_luci-lib-docker=m
+CONFIG_PACKAGE_luci-lib-docker=n
 CONFIG_PACKAGE_luci-lib-ip=y
 CONFIG_PACKAGE_luci-lib-jsonc=y
 CONFIG_PACKAGE_luci-lib-nixio=y
@@ -311,7 +311,7 @@ CONFIG_PACKAGE_sqm-scripts=y
 CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tcping=m
 CONFIG_PACKAGE_tini=m
-CONFIG_PACKAGE_ttyd=y
+CONFIG_PACKAGE_ttyd=n
 CONFIG_PACKAGE_ucode-mod-html=y
 CONFIG_PACKAGE_ucode-mod-lua=y
 CONFIG_PACKAGE_ucode-mod-math=y
@@ -322,7 +322,7 @@ CONFIG_PACKAGE_wpad-basic-mbedtls=m
 CONFIG_PACKAGE_wsdd2=m
 CONFIG_PACKAGE_xray-core=m
 CONFIG_PACKAGE_xtables-nft=y
-CONFIG_PACKAGE_zerotier=y
+CONFIG_PACKAGE_zerotier=n
 CONFIG_PACKAGE_zram-swap=y
 # CONFIG_SAMBA4_SERVER_AVAHI=y
 # CONFIG_SAMBA4_SERVER_NETBIOS=y
