--- a/configs/ipq60xx-6.12-wifi.config
+++ b/configs/ipq60xx-6.12-wifi.config
@@ -347,5 +347,5 @@ CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_luci-proto-relay=y
 CONFIG_PACKAGE_kmod-trelay=y
 CONFIG_PACKAGE_luci-app-samba4=y
-
+CONFIG_PACKAGE_luci-app-autoreboot=y
 
